# deep-research-skills

./: .gitignore  CHECKPOINT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.opencode/skills/deep-research/: SKILL.md
.opencode/skills/deep-research/assets/: qa-scenarios.md
.opencode/skills/deep-research/references/: consensus-analysis.md  literature-search.md  screening-protocol.md  (+1 more)
.opencode/skills/shared/: api-configs.md  citation-standards.md  research-templates.md
deep_research/: config.py
deep_research/api/: models.py  pubmed.py  qwen.py  semantic_scholar.py
deep_research/cli/: __init__.py  main.py
deep_research/core/: citation_graph.py  classifier.py  consensus.py  deduplication.py  evidence.py  gap_analysis.py  quality.py  query_builder.py  relevance.py  report.py  screening.py  search_orchestrator.py  strategy.py  survey.py  synthesis_orchestrator.py
deep_research/storage/: __init__.py  cache.py
deep_research/utils/: fetcher.py  logging.py  rate_limiter.py
examples/: basic_search.py  consensus_analysis.py
tests/: conftest.py  test_cache.py  test_citation_graph.py  test_classifier.py  test_config.py  test_consensus.py  test_deduplication.py  test_evidence.py  test_example.py  test_fetcher.py  test_gap_analysis.py  test_models.py  test_pubmed.py  test_quality.py  test_query_builder.py  test_qwen.py  test_rate_limiter.py  test_relevance.py  test_report.py  test_screening.py  test_search_orchestrator.py  test_semantic_scholar.py  test_strategy.py  test_survey.py  test_synthesis_orchestrator.py
